# dpss-frontend

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  hello.py  pyproject.toml  requirements.txt
src/: config.py  const.py  forms.py  functions.py  main.py  models.py  templates.py
src/routers/: __init__.py  reports.py  sandbox.py  scans.py  vulners.py
src/schemas/: forms.py  models.py
src/services/: config.py  reports.py  scans.py  utils.py  vulners.py
src/ui/: base.py
