[project]
name = "dpss-frontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "fastui>=0.7.0",
    "httpx>=0.28.1",
    "jwt>=1.3.1",
    "pydantic==2.9.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "uvicorn[standard]>=0.34.3",
]
